--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,23 @@ svg {
   padding: 2rem;
 }
 
+.filter p {
+  display: inline;
+}
+
+.filter p:nth-of-type(2) {
+  font-weight: bold;
+}
+
+.filter h2 {
+  margin: 1.2rem 0 1.2rem 0;
+  font-size: 1.2rem;
+}
+
+.filter h2:nth-of-type(2) {
+  margin: 1.2rem 0;
+}
+
 .filter label {
   display: flex;
   align-items: center;
