--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
-html,
 body {
-  margin: 2rem 4rem;
+  margin: 4rem 0;
   box-sizing: border-box;
   font-family: "Source Sans Pro", sans-serif;
+}
+
+@media only screen and (max-width: 1000px) {
+  body {
+    margin: 4rem 2rem;
+  }
 }
 
 h1,
@@ -37,12 +42,6 @@ svg {
   min-width: 13rem;
   background-color: lightgray;
   padding: 2rem;
-}
-
-@media only screen and (max-width: 1000px) {
-  body {
-    margin: 2rem 2rem;
-  }
 }
 
 @media only screen and (max-width: 768px) {
